--- a/src/components/forumAdmin/index.html
+++ b/src/components/forumAdmin/index.html
@@ -13,13 +13,173 @@
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/src/js/script.js" defer></script>
-    <link rel="stylesheet" href="/src/css/styles.css">
+    <script src="/src/components/forumAdmin/index.js" defer></script>
+    <link rel="stylesheet" href="/src/components/forumAdmin/style.css">
     <title>Riwall</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <header>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./src/components/wall/index.html">Muro</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./src/components/objectLost/index.html">Objetos perdidos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Foro</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./src/components/singIn/index.html">Log In</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Perfil</a></li>
+                                    <li><a class="dropdown-item" href="#" id="logout">Cerrar sesion</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </header>
+    <main>
+                <!------ BOTON  Y CONTENIDO DE REALIZAR UNA PREGUNTA ------->
+                <div class="main">
+                    <div class="mainContain button">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                          COMENTAR
+                        </button>
+                    <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">PPPPPPPPPP</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="input-group flex-nowrap">
+                                            <span class="input-group-text" id="addon-wrapping">CACACACACACA</span>
+                                            <input type="text" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
+                                        </div>
+                                        <div class="form-floating">
+                                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                                            <label for="floatingTextarea2">Post Description(DescripCION)</label>
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn" data-bs-dismiss="modal">CloseERERARA</button>
+                                        <button type="submit" class="btn">Post()</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mainContain mainContainCard">
+                        <div class="card text-center">
+                            <div class="card-header">
+                              <!--    DIV QQUE CONTENIA TEXTO<div class="postedBy"> ppapap</div> -->
+                                <!-- Button trigger modal -->
+                                <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal1">eliminar</button>
+                               
+                                <!-- <img type="button" src="/src/assets/images/eliminar.png"  width="35px"> -->
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete this post</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Are you sure you want to delete this post?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn">Sure</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                               
+                                <div class="card-bodyRight">
+                                    <h3 class="card-title">QUE SE HACER CON LA ETIQUETA REMOVE AYUDENME PLEASE</h3>
+                                    <p class="card-text">Con esta etiqueta se  puede eliminar todo un contenido o todo lo que quiera </p>
+                                </div>
+                            </div>
+                            <div class="card-footer text-body-secondary">
+                                22/05/2024 - 20:45
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>
+        
+    </main>
+    <aside>
+        <div class="father-aside" id="aside">
+            <h2>INFORMACION</h2>
+            <div class="aside-son">1</div>
+            <div  class="aside-son">2</div>
+            <div  class="aside-son">3</div>
+            <div  class="aside-son">3</div>
+            
+        </div>
+    </aside>
+    <footer>
+        <div class="footer">
+            <div class="footerContain">
+                <div class="logo"> <img src="/src/assets/images/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
+            </div>
+            <div class="footerContain footermargin textAlignC">
+                <div class="contact"><h3>Contact</h3></div>
+                <div class="textContact">
+                    <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
+                    <div><img src="/src/assets/images/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><a href="mailto:info@riwi.io"><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</a></div>
+                </div>
+            </div>
+            <div class="footerContain footermargin socialResponsive textAling">
+                <div class="socialMedia"><h3>Social Networks</h3></div>
+                <div class="logoSocial">
+                    <a href="#"><img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px"></a>
+                    <a href="#"><img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px"></a>
+                    <a href="#"><img src="/src/assets/images/iconin.png" alt="iconin"  width="50px"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+  
+ 
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    </footer>
+    </footer>
 </body>
 </html>
