--- a/src/components/objectLost/index.html
+++ b/src/components/objectLost/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="/index.html">
                     <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
